# Signalbot

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
signalbot/bot/: formatters.py  handlers.py  keyboards.py  main.py
signalbot/core/: config.py  db.py  models.py  types.py
signalbot/data/: ccxt_provider.py  provider.py
signalbot/engine/: analyzer.py  backtester.py  live_engine.py  metrics.py  plotting.py  tracker.py
signalbot/strategies/: base.py  bollinger_reversion.py  donchian_breakout.py  ema_cross.py  indicators.py  macd_cross.py  registry.py  rsi_reversion.py  supertrend.py
tests/: conftest.py  test_analyzer.py  test_backtester.py  test_dedup.py  test_lookahead.py  test_market_overview.py  test_metrics.py  test_new_strategies.py  test_provider.py  test_whitelist.py
