[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalbot"
version = "0.1.0"
description = "Signal-only Telegram bot for crypto-futures strategy research (no trading)"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["signalbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
